# clayer

./: .clayer  .gitignore  Makefile.am  README.md  cl_terminal  clayer.sh  clayer_alsa.sh  clayer_port.sh  configure.ac  project.vim  terminal  test.sh
controller/: Makefile.am  main.cc
decoder/: Makefile.am  main.cc
decoder_test/: Makefile.am
fdebug/: Makefile.am  main.cc
ffmpegpp/: Makefile.am  ffmpegpp.cc  ffmpegpp.h
ffmpegpp_test/: Makefile.am  ffmpeg_open_stream_test.cc  ffmpeg_open_test.cc  main.cc
iobus/: Makefile.am  iobus.cc  iobus.h
iobus_test/: Makefile.am  iobus_forward_ignore_test.cc  iobus_forward_untill_test.cc  iobus_get_test.cc  iobus_ignore_untill_test.cc  iobus_post_test.cc  main.cc
lalsa/: Makefile.am  lalsa.cc  lalsa.h
lalsa_test/: Makefile.am  main.cc  snd_pcm_delay_test.cc  snd_pcm_mmap_writei_test.cc  snd_pcm_open_test.cc
lffmpeg/: Makefile.am  lffmpeg.cc  lffmpeg.h
lffmpeg_test/: Makefile.am  av_copy_frame_to_buffer_test.cc  av_frame_pts2_test.cc  av_frame_pts_test.cc  av_get_buffer_size_test.cc  av_image_fill_arrays_test.cc  av_new_frame_test.cc  av_new_packet_test.cc  av_read_and_send_to_avcodec_test.cc  av_read_frame_test.cc  av_seek_frame_test.cc  avcodec_open_test.cc  avcodec_receive_frame_audio_test.cc  avcodec_receive_frame_video_test.cc  avformat_alloc_passthrough_context_test.cc  avformat_find_stream_test.cc  avformat_open_close_test.cc  avstream_info_test.cc  main.cc  swr_alloc_set_opts_and_init_test.cc  swr_convert_test.cc  swr_resample_size_test.cc  sws_getContext_test.cc  sws_scale_test.cc
lmagic_wand/: Makefile.am  lmagic_wand.cc  lmagic_wand.h
lmagic_wand_test/: Makefile.am  create_drawing_wand_test.cc  create_magic_wand_test.cc  drawing_test.cc  main.cc
lport_audio/: Makefile.am  lport_audio.cc  lport_audio.h
lport_audio_test/: Makefile.am  Pa_GetStreamLast_test.cc  Pa_Init_and_OpenStream_test.cc  main.cc
lsdl2/: Makefile.am  lsdl2.cc  lsdl2.h
lsdl2_test/: Makefile.am  SDL_AudioClock_test.cc  SDL_AudioLast_test.cc  SDL_CreateTexture_only_test.cc  SDL_CreateTexture_test.cc  SDL_CreateWindow_test.cc  SDL_OpenAudio_test.cc  SDL_Present_test.cc  SDL_QueueAudio_test.cc  TTF_OpenFont_test.cc  TTF_RenderUTF8_Blended_test.cc  main.cc
media/: Makefile.am  media.cc  media.h  sub_ass.cc  sub_ass.h  sub_srt.cc  sub_srt.h
media_test/: Makefile.am  audio_event_test.cc  buffer_event_test.cc  clock_event_test.cc  control_event_test.cc  create_player_context_test.cc  ffmpeg_to_sdl_format.cc  frame_event_test.cc  frames_event_test.cc  layer_event_test.cc  load_buffer_test.cc  main.cc  media_clock_test.cc  no_layer_event_test.cc  open_video_test.cc  resampler_params_test.cc  rescaler_params_test.cc  sample_event_test.cc  samples_event_test.cc  sub_ass_test.cc  sub_srt_test.cc  video_event_test.cc
mem/: Makefile.am  circular_shm.cc  circular_shm.h  pool_shm.cc  pool_shm.h
mem_test/: Makefile.am  circular_shm_alloc_test.cc  circular_shm_create_test.cc  circular_shm_load_test.cc  main.cc  pool_shm_create_test.cc  pool_shm_load_test.cc
mock_alsa/: Makefile.am  mock_alsa.c  mock_alsa.h
mock_ass/: Makefile.am  mock_ass.c  mock_ass.h
mock_ffmpeg/: Makefile.am  mock_ffmpeg.c  mock_ffmpeg.h
mock_magic_wand/: Makefile.am  mock_magic_wand.c  mock_magic_wand.h
mock_port_audio/: Makefile.am  mock_port_audio.c  mock_port_audio.h
mock_sdl2/: Makefile.am  mock_sdl2.c  mock_sdl2.h
mock_std/: Makefile.am  mock_std.c  mock_std.h
mock_sys/: Makefile.am  mock_sys.c  mock_sys.h
resampler/: Makefile.am  main.cc  resampler
rescaler/: Makefile.am  main.cc
screen/: Makefile.am  main.cc  screen
speaker/: Makefile.am  main.cc
stdexd/: Makefile.am  stdexd.cc  stdexd.h
stdexd_test/: Makefile.am  file_test.cc  main.cc  mock.c  mock.h  stdarg_test.cc
stdport/: Makefile.am  stdport.c  stdport.h
stdport_test/: Makefile.am
subtitle/: Makefile.am  main.cc
sysexd/: Makefile.am  sysexd.cc  sysexd.h
sysexd_test/: Makefile.am  main.cc  msgget_test.cc  msgrcvstr_test.cc  msgsnd_test.cc  msgsndstr_test.cc  sem_load_with_id_test.cc  sem_new_with_id_test.cc  shmat_test.cc  shmget_test.cc
sysport/: Makefile.am  fmm.c  sysport.c  sysport.h
