noinst_PROGRAMS = libmedia.test
libmedia_test_SOURCES = main.cc ../media/media.cc open_video_test.cc ffmpeg_to_sdl_format.cc load_buffer_test.cc
libmedia_test_LDADD = -lcunit -lcunitexd -lstdexd -lmock_sdl2 -lmock_ffmpeg -liobus -llsdl2 -lmock_sys -lmem
libmedia_test_LDFLAGS = -L../stdexd -L../mock_sdl2 -L../mock_ffmpeg -L../iobus -L../lsdl2 -L../mock_sys -L../mem
