bin_PROGRAMS = speaker
speaker_SOURCES = main.cc
speaker_LDADD = -lsysport -lstdport -lsysexd -lstdexd -llffmpeg -lmem -liobus -lmedia -lSDL2 -llsdl2 -lportaudio -llport_audio
speaker_LDFLAGS = -L../sysport -L../stdport -L../sysexd -L../stdexd -L../lffmpeg -L../mem -L../iobus -L../media -L../lsdl2 -L../lport_audio
