bin_PROGRAMS = cl_speaker
cl_speaker_SOURCES = main.cc
cl_speaker_LDADD = -lsysport -lstdport -lsysexd -lstdexd -llffmpeg -lmem -liobus -lmedia -lSDL2 -llsdl2 -lportaudio -llport_audio
cl_speaker_LDFLAGS = -L../sysport -L../stdport -L../sysexd -L../stdexd -L../lffmpeg -L../mem -L../iobus -L../media -L../lsdl2 -L../lport_audio
