bin_PROGRAMS = subtitle
subtitle_SOURCES = main.cc
subtitle_CPPFLAGS = $(MAGICKWAND_CFLAGS)
subtitle_LDADD = -lsysport -lstdport -lsysexd -lstdexd -lmem -liobus -lmedia -llmagic_wand
subtitle_LDFLAGS = -L../sysport -L../stdport -L../sysexd -L../stdexd -L../mem -L../iobus -L../media -L../lmagic_wand $(MAGICKWAND_LIBS)

